# ShovelsUp

./: .gitignore  CLAUDE.md  DESIGN.md  prd-montreal-council-meeting-import.md
apps/web/: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_CHECKLIST.md  docker-compose.yml
apps/web/.specify/: feature.json
apps/web/.sqlx/: query-099fc3cd9d96466a3b0fcb1ffddb6a6fc505b8186c4eaa4ebf0d2b2bb2a00482.json  query-0d8f55520f1d2f75fdd2877e589b2f8d6584822dd3b09b13384794197726c433.json  query-0ebd3e31d825e8a3f4937e32fc235c4c951342182ad6fc3a912bcfac58f0a9f3.json  query-12f15a3e3a9216acfb335925febec7792b4dde011b53459df328a714df7edfca.json  query-142a888135f066d953963250807173da473309bbc96030ef8c04dd4576b5f7aa.json  query-1b0deade2034b2609569aa2d69ad3600a84ef605b2a33d03dc48cce533a4b13b.json  query-1b73b8afb53cb37166e59803fbfb51dc41a3760d6db48d12d0fa6295a873726b.json  query-338427447f79e374e0fe92f007a78b883349454c1ff0d792f4d65088aed3161e.json  query-348269a79187ab34df337bfa1aa4436fed2bcb3d2dd7cc2b8d31761f0c94d0af.json  query-3736825b1ee94ed6d682e15f205fdb884686c614b2f6faa8339e5502e898c956.json  query-38a5825fe20a20b526521967254899168242381c10e02a734f9e7acf1d864789.json  query-3d76707d202a431a8b271c246d7a5e8ef9daeca3fb2bf2bcb20f5317d1f46b7f.json  query-3dacda302ae9ed35bee516234fe8c1dfa0ef7ea37f921f16c49ec55403c4e6e2.json  query-3e83b750fcefc7c7e3bad7f7e9c920a396d7a81413f615c4018d075649913a9a.json  query-4807ee2207ae51857f8b16e2f38270b1b7d0c17bca13ea1184e57cd58ece2785.json  query-4d1f1acf8b3a4eecac547c29993e553951225f5223449f239a5e663ebf0d9513.json  query-51fa8498c9a66248c013641d7ea604fc1ec524b77d50194a96f52b90273f716e.json  query-555b2fe6183dcfbd2e4b71ee40b5de73751266725730d26d416f8470bdc4f66b.json  query-5df43844072dceeb02ab719ada2527cb186bce2caf86a5be50740d3cd1acc0d0.json  query-63b43bda45f62f20730ed67496ebb711a9d1955910a340b2f7b4ba32ee0fc2e9.json  query-68fe43261605fa58db75fe7c17ae7596996270648b1dba87f72a4608cf291e64.json  query-699260fcf9cf12557bb7550915b9b2ac8ee20fcac3ae55db9a729c1903f6b463.json  query-6aa7ed98cc2f8d9bc0620a31c9bc9ea180d2b47dbdc31620a4590e8cd594c1f2.json  query-77418600c942e092640dcea65e8afaf229956500c974db7c4332fe755ca59970.json  query-777f9e000d20b483be92c4884885132084ff4c3b5b32401a2bfea410eb88db54.json  query-77bb7ebe77577a7bd3c36c4be9a5f1431c979366c295538bd004a10394883db2.json  query-794bec4a3eef223ce4272b5400d089ecad12abb4cab77048ebb3f85a291db8ca.json  query-7ecfc1c439abad705e3b6bf36b34ca2d0ed81f45dc9b95734c5c7b9e8ccefb4a.json  query-7f455daa9d302633d2c7c43fa170a70261e39c25512c0beb73cc772b0604ae8d.json  query-840da262fb26e08d62ce99cb96ba3efccbdf5e84ca3d4c88a6580972591a1ac5.json  query-8ab7badbdc23a595477aa4112f4147b6239348c9f2a4c81abc4c1c83b693df7a.json  query-8b40ff718e1f92046cea8660bbba73ce2652c217d623c94d6c7963bd351f3275.json  query-8b4e6cc8d7f9c631990132b8059522193752f0044946c6b63e5594d6e22d26e1.json  query-8d565631d7e97feecd8ada56f69c3b3a87b67f95bb8a1a1bb4c1a7173432a74b.json  query-920a211c3783d64bae777c9ebfc910756179b9eea05c43eb2c8f7a4e74a4ce94.json  (+36 more)
(+187 files in other folders)
