[package]
name = "shovelsup-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shovelsup-web"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "compression-full", "trace"] }
minijinja = { version = "2", features = ["loader"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
