[package]
name = "shovelsup-web"
version = "0.1.0"
edition = "2021"

[lib]
name = "shovelsup_web"
path = "src/lib.rs"

[[bin]]
name = "shovelsup-web"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "compression-full", "trace"] }
minijinja = { version = "2", features = ["loader"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "chrono", "uuid"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
scraper = "0.20"
whatlang = "0.16"
bcrypt = "0.15"
redis = { version = "0.27", features = ["tokio-comp"] }
thiserror = "1"
sha2 = "0.10"
base64 = "0.22"
encoding_rs = "0.8"

[dev-dependencies]
wiremock = "0.6"
once_cell = "1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["test-util"] }
