[package]
name = "shovelsup-pipeline"
version = "0.1.0"
edition = "2021"

[lib]
name = "shovelsup_pipeline"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "uuid"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
scraper = "0.20"
whatlang = "0.16"
thiserror = "1"
sha2 = "0.10"
encoding_rs = "0.8"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["test-util"] }
